--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,29 @@
-# Python bytecode
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
+node_modules/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+build/
 
-# Virtual environments
-venv/
-env/
-ENV/
-.venv/
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# IDE specific files
 .idea/
 .vscode/
 *.swp
 *.swo
-.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .vs/
 
-# Project specific
-*.log
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Specifically exclude Python implementation files
-setup.py
-shield_calculator.py
-shield_calculator_ui.py
-shieldcalc.py
-requirements.txt
-shield_generators.json
-shieldinfo.json
